--- a/test/index.html
+++ b/test/index.html
@@ -16,7 +16,7 @@
     <script>mocha.setup('bdd')</script>
     <script src='osm.test.js'></script>
     <script>
-      (window.mochaPhantomJS || window.mocha).run();
+      window.mocha.run();
     </script>
   </body>
 </html>
