--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ this page is based on https://github.com/aaronlidman/osm-and-geojson (c)Aaron Li
     </style>
 </head>
 <body>
-        <a href="https://github.com/you"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+        <a href="https://github.com/tyrasd/osmtogeojson"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
         <div id="top">
             <span id="name">osmtogeojson</span> converts OSM XML to GeoJSON.
         </div>
