simpler API (module exports as a plain function)
old `.toGeojson` is still available as a fallback.

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ this page is based on https://github.com/aaronlidman/osm-and-geojson (c)Aaron Li
                             &lt;script src='osmtogeojson.js'>&lt;/script>
                         </code></li>
                         <li><code>
-                            osmtogeojson.toGeojson(xml_data);
+                            osmtogeojson(osm_data);
                         </code></li>
                     </ul>
                 </li>
@@ -170,8 +170,8 @@ this page is based on https://github.com/aaronlidman/osm-and-geojson (c)Aaron Li
                             npm install osmtogeojson
                         </code></li>
                         <li><code>
-                            var osm = require('osmtogeojson');<br>
-                            osm.toGeojson(xml_data);
+                            var osmtogeojson = require('osmtogeojson');<br>
+                            osmtogeojson(xml_data);
                         </code></li>
                     </ul>
                 </li>
