update usage examples to be consistent with what is command line

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ this page is based on https://github.com/aaronlidman/osm-and-geojson (c)Aaron Li
                 <li>As a nodejs library:
                     <ul>
                         <li><code>
-                            npm install osmtogeojson
+                            $ npm install osmtogeojson
                         </code></li>
                         <li><code>
                             var osmtogeojson = require('osmtogeojson');<br>
@@ -176,7 +176,7 @@ this page is based on https://github.com/aaronlidman/osm-and-geojson (c)Aaron Li
                 <li>As a command line tool:
                     <ul>
                         <li><code>
-                            npm install -g osmtogeojson
+                            $ npm install -g osmtogeojson
                         </code></li>
                         <li><code>
                             $ osmtogeojson file.osm > file.geojson
