update some links in index.html demo page; make it load from https

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!-- 
 demo page / introduction for osmtogeojson
-http://tyrasd.github.io/osmtogeojson
-http://github.com/tyrasd/osmtogeojson
+https://tyrasd.github.io/osmtogeojson
+https://github.com/tyrasd/osmtogeojson
 this page is based on https://github.com/aaronlidman/osm-and-geojson (c)Aaron Lidman, WTFPL
 -->
 <html>
 <head>
     <title>osmtogeojson</title>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.10.1.min.js"></script>
     <script type="text/javascript" src="osmtogeojson.js"></script>
     <script type="text/javascript">
         function toGeo(e) {
@@ -153,7 +153,7 @@ this page is based on https://github.com/aaronlidman/osm-and-geojson (c)Aaron Li
             <a class="button" href="" id="toGeo">convert to GeoJSON &rarr;</a>
         </div>
         <div id="about">
-            <p>osmtogeojson is a Javascript module for converting OSM data (OSM XML or Overpass JSON) to GeoJSON. It works in the browser, nodejs and can also be used as a command line tool. This OSM conversion code was written for and is maintained by the <a href="http://github.com/tyrasd/overpass-ide">overpass-turbo</a> project.</p>
+            <p>osmtogeojson is a Javascript module for converting OSM data (OSM XML or Overpass JSON) to GeoJSON. It works in the browser, nodejs and can also be used as a command line tool. This OSM conversion code was written for and is maintained by the <a href="https://github.com/tyrasd/overpass-turbo">overpass-turbo</a> project.</p>
             <span style="font-weight: bold;">Usage: </span>
             <ul>
                 <li>In the browser:
@@ -190,7 +190,7 @@ this page is based on https://github.com/aaronlidman/osm-and-geojson (c)Aaron Li
             </ul>
             Read more about the API in the official <a href="https://github.com/tyrasd/osmtogeojson#usage">documentation</a>.
             <div id="download">
-                <p><a class="button" href="http://github.com/tyrasd/osmtogeojson/raw/gh-pages/osmtogeojson.js">download osmtogeojson.js</a><br/><br/>
+                <p><a class="button" href="https://github.com/tyrasd/osmtogeojson/raw/gh-pages/osmtogeojson.js">download osmtogeojson.js</a><br/><br/>
                     github: <a href="https://github.com/tyrasd/osmtogeojson">tyrasd/osmtogeojson</a><br/>
                     npm: <a href="https://npmjs.org/package/osmtogeojson">osmtogeojson</a><br/>
                     license: <a href="https://github.com/tyrasd/osmtogeojson/blob/gh-pages/LICENSE">MIT</a><br/>
