tyrasd.github.io/osmtogeojson: Clarify xml<>json
All commands support xml or osm json, so ideally all should receive the same input

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ this page is based on https://github.com/aaronlidman/osm-and-geojson (c)Aaron Li
                             &lt;script src='osmtogeojson.js'>&lt;/script>
                         </code></li>
                         <li><code>
-                            osmtogeojson(osm_data);
+                            osmtogeojson(osm_data); // xml or json
                         </code></li>
                     </ul>
                 </li>
@@ -173,7 +173,7 @@ this page is based on https://github.com/aaronlidman/osm-and-geojson (c)Aaron Li
                         </code></li>
                         <li><code>
                             var osmtogeojson = require('osmtogeojson');<br>
-                            osmtogeojson(xml_data);
+                            osmtogeojson(osm_data); // xml or json
                         </code></li>
                     </ul>
                 </li>
